# python-project-49

./: .gitignore  Makefile  README.md  cli.py  cli_brain_calc.py  cli_brain_even.py  cli_brain_progression.py  pyproject.toml  sdf.py
brain_games/: cli.py  cli_brain_calc.py  cli_brain_even.py  cli_brain_gcd.py  cli_brain_prime.py  cli_brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
